--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -45,7 +45,7 @@
       },
       "outputs": [],
       "source": [
-        "\n",
+        "import unicodedata\n",
         "def remove_vowels(text: str) -> str:\n",
         "    \"\"\"\n",
         "    This function removes all vowels from strings\n",
@@ -53,6 +53,8 @@
         "    \"\"\"\n",
         "\n",
         "    # Write your code here\n",
+        "    text=text.lower()\n",
+        "    text = unicodedata.normalize(\"NFKD\", text)\n",
         "    for i in [\"a\",\"e\",\"i\",\"o\",\"u\"]:\n",
         "        text = text.replace(i,\"\")\n",
         "    return text"
@@ -69,19 +71,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s98hacHTZfnm",
-        "outputId": "ae7e6a17-1113-4006-9330-59328edf0ab9"
+        "outputId": "2e5b96ea-c25c-4ea8-dcaa-9fc13a981d32"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Est f n bn dí\n"
+            "st f n bn d́\n"
           ]
         }
       ],
       "source": [
-        "\n",
         "assert remove_vowels(\"hola\") == \"hl\"\n",
         "answer_1  = remove_vowels(\"Este fue un buen día\")\n",
         "print(answer_1)"
